envoy.yaml
---
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: '7443'
    socket_options: []
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          forward_client_cert_details: SANITIZE
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
              log_format:
                text_format_source:
                  inline_string: '[%START_TIME%][access_log][INFO] {"method":"%REQ(:METHOD)%","path":"%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%","protocol":"%PROTOCOL%","responseCode":"%RESPONSE_CODE%","responseFlags":"%RESPONSE_FLAGS%","bytesReceived":"%BYTES_RECEIVED%","bytesSent":"%BYTES_SENT%","duration":"%DURATION%","upstreamServiceTime":"%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%","xForwardedFor":"%REQ(X-FORWARDED-FOR)%","userAgent":"%REQ(USER-AGENT)%","correlationId":
                    "%REQ(X-REQUEST-ID)%","authority":"%REQ(:AUTHORITY)%","upstreamHost":"%UPSTREAM_HOST%"}'
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: upstream
                  auto_host_rewrite: 'true'
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internal_address_config:
            cidr_ranges:
            - address_prefix: 0.0.0.0
              prefix_len: 8
            - address_prefix: 10.0.0.0
              prefix_len: 8
            - address_prefix: 192.168.0.0
              prefix_len: 16
            - address_prefix: 172.16.0.0
              prefix_len: 12
            - address_prefix: 127.0.0.1
              prefix_len: 32
            - address_prefix: 'fd00::'
              prefix_len: 8
            - address_prefix: "::1"
              prefix_len: 128
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
              cipher_suites:
              - "[ECDHE-ECDSA-AES128-GCM-SHA256|ECDHE-ECDSA-CHACHA20-POLY1305]"
              - "[ECDHE-RSA-AES128-GCM-SHA256|ECDHE-RSA-CHACHA20-POLY1305]"
              - AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              - ECDHE-RSA-AES256-GCM-SHA384
              - AES256-GCM-SHA384
            tls_certificates:
            - certificate_chain:
                filename: "/etc/service.crt"
              private_key:
                filename: "/etc/service.key"
            validation_context:
              trusted_ca:
                filename: "/etc/trust-store.pem"
              crl:
                filename: "/etc/crl.pem"
          require_client_certificate: true
  clusters:
  - name: upstream
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: upstream
                port_value: '5678'
